tests/positive/test_id.orb
import "util/io.orb";

fnc main () () {
    sym (a=+-*/%<>&|^!~[]._?0123456789:i32 100);
    println_i32 a=+-*/%<>&|^!~[]._?0123456789;
};