tests/negative/test_expr_addrof_tuple_elem_non_ref.orb
fnc foo () (i32 i32) {
    sym f:(i32 i32);
    ret f;
};

fnc main () () {
    & ([] (foo) 0);
};